# runemail

./: Cargo.toml  README.md  flake.nix
.github/workflows/: audit.yml  clippy.yml  fmt.yml  test.yml
crates/jmap-protobuf/: Cargo.toml
crates/jmap-protobuf/proto/jmap/: core.proto  mail.proto  session.proto
crates/proto/: Cargo.toml  build.rs
crates/proto/proto/: wks.proto
crates/proto/src/: lib.rs
crates/wkd/: Cargo.toml
crates/wks/: Cargo.toml
crates/wks/src/: config.rs  main.rs
crates/wks/src/provider/: mod.rs
