[package]
name = "runemail-wks"
version.workspace = true
edition.workspace = true

[dependencies]
runemail-proto.workspace = true
runesys.workspace = true

tokio.workspace = true
tokio-stream = "0.1"

axum.workspace = true
axum-extra = "0.10"

serde = { version = "1", features = ["derive"] }

inotify = "0.11"
sequoia-openpgp = "2"
enum_dispatch = "0.3"
zbase32 = "0.1"
tracing = "0.1"